# data-sources

./: Dockerfile  docker-compose.yml
csv-parse/: Cargo.toml  Readme.md
csv-parse/src/: index.html  main.rs
direct-upload/: Cargo.toml
direct-upload/src/: index.html  main.rs
gsheet-db-sync/: Cargo.toml  Readme.md
gsheet-db-sync/src/: index.html  main.rs
