[package]
name = "direct-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
google-cloud-storage = "0.8.1"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
