[package]
name = "gsheet-db-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
serde = { version = "1.0.152", features = ["derive"] }
sheets = "0.5.1"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "any",
] }
tokio = { version = "1.25", features = ["macros"] }
